--- a/index.html
+++ b/index.html
@@ -17,31 +17,42 @@
        <section class="card" id="html-section">
      <h2>HTML</h2>
      <ul>
-       <li>The head element contains information about the webpage.</li>
-    <li>The body element represents the visible content shown to the user.</li>
+        <li>The head element contains information about the webpage.</li>
+        <li>The body element represents the visible content shown to the user.</li>
      </ul>
    </section>
 
    <section class="card" id="css-section">
 <h2>CSS</h2>
      <ul>
-      <li>A margin indicates how much space we want around the outside of an element.</li>
-      <li>A padding indicates how much space we want around the content inside an element.</li>
+        <li>A margin indicates how much space we want around the outside of an element.</li>
+        <li>A padding indicates how much space we want around the content inside an element.</li>
      </ul>
    </section>
 
    <section class="card" id="git-section">
 <h2>Git</h2>
      <ul>
-       <li>git status: checks what branch we are currently on</li>
-    <li>git checkout -b branch-name: creates a new branch and switches to it</li>
+        <li>git status: checks what branch we are currently on</li>
+        <li>git checkout -b branch-name: creates a new branch and switches to it</li>
      </ul>
    </section>
 
    <section class="card" id="javascript-section">
 <h2>JavaScript</h2>
      <ul>
-       <li>Enter your JavaScript notes here</li>
+        <li>A variable is a named container that allows us to store data in our code.</li>
+        <li>Control flow is the order in which a computer executes code in a script.</li>
+        <li>JavaScript is case sensitive. This means myVariable is not the same as myvariable. If you have problems in your code, check the case!</li>
+        <li>You can name a variable nearly anything, but there are some restrictions. (See this section about naming rules.) If you are unsure, you can check your variable name to see if it's valid</li>
+        <li>A semicolon at the end of a line indicates where a statement ends. It is only required when you need to separate statements on a single line.</li>
+        <li>Comments are snippets of text that can be added along with code. The browser ignores text marked as comments. You can write comments in JavaScript just as you can in CSS.</li>
+        <li>Variables are containers that store values. You start by declaring a variable with the let keyword, followed by the name you give to the variable</li>
+        <li>An operator is a mathematical symbol that produces a result based on two values (or variables)</li>
+        <li>Conditionals are code structures used to test if an expression returns true or not. A very common form of conditionals is the if...else statement.</li>
+        <li>Functions are a way of packaging functionality that you wish to reuse. It's possible to define a body of code as a function that executes when you call the function name in your code. This is a good alternative to repeatedly writing the same code.</li>
+        <li>Real interactivity on a website requires event handlers. These are code structures that listen for activity in the browser, and run code in response. The most obvious example is handling the click event, which is fired by the browser when you click on something with your mouse. </li>
+        <li>JavaScript is a weakly typed language. This means that you can often use a value of one type where another type is expected, and the language will convert it to the right type for you.</li>
      </ul>
    </section>
     </main>
